--- a/website_go_k8s/Dockerfile
+++ b/website_go_k8s/Dockerfile
@@ -1,10 +1,6 @@
-FROM ubuntu
+FROM golang:alpine
 
-RUN apt update
-RUN apt install -y wget
-
-RUN wget https://golang.org/dl/go1.16.5.linux-amd64.tar.gz
-RUN rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.5.linux-amd64.tar.gz
-RUN export PATH=$PATH:/usr/local/go/bin
-COPY time.go /
-ENTRYPOINT go run time.go
+WORKDIR /app
+ADD time.go /app
+RUN go build -o time .
+CMD["/app/time"]
