--- a/website_go_k8s/deploy.yaml
+++ b/website_go_k8s/deploy.yaml
@@ -20,7 +20,7 @@ spec:
                 spec:
                         containers:
                                 - name: time-pod
-                                  image: //s//
+                                  image: mugil23/time
                                   ports:
                                           - containerPort: 8080
 
