--- a/website_go_k8s/pod.yaml
+++ b/website_go_k8s/pod.yaml
@@ -8,6 +8,6 @@ metadata:
 spec:
         containers:
                 - name: time
-                  image: //s//
+                  image: mugil23/time
                   ports:
                           - containerPort: 8080
