changer fot GKE

--- a/website_go_k8s/service.yaml
+++ b/website_go_k8s/service.yaml
@@ -6,11 +6,10 @@ metadata:
                 name: time-service
                 lang: go
 spec:
-        type: NodePort
+        type: LoadBalancer
         port:
                 - port: 8080
                   targetPort: 8080
-                  nodePort: 30004
         selector:
                 name: time-pod
                 lang: go
