--- a/website_go_k8s/service.yaml
+++ b/website_go_k8s/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
         name: time-service
-        lables:
+        labales:
                 name: time-service
                 lang: go
 spec:
         type: LoadBalancer
-        port:
+        ports:
                 - port: 8080
                   targetPort: 8080
         selector:
