--- a/website_go_k8s/service.yaml
+++ b/website_go_k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
         name: time-service
-        labales:
+        labels:
                 name: time-service
                 lang: go
 spec:
